<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2cpwm_ros2</name>
  <version>0.0.0</version>
  <description>i2cpwm driver for ROS2 for Auburn University Software for Sensors</description>
  <maintainer email="ctl0021@auburn.edu">jetson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>i2cpwm_ros2_msgs</depend>  
  <depend>softsys_msgs</depend>
  <depend>launch_xml</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
